src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@view-transition {
	navigation: auto;
}

@layer base {
	:root {
		--background: 0 0% 100%;
		--foreground: 240 10% 3.9%;
		--card: 0 0% 100%;
		--card-foreground: 240 10% 3.9%;
		--popover: 0 0% 100%;
		--popover-foreground: 240 10% 3.9%;
		--primary: 240 5.9% 10%;
		--primary-foreground: 0 0% 98%;
		--secondary: 240 4.8% 95.9%;
		--secondary-foreground: 240 5.9% 10%;
		--muted: 240 4.8% 95.9%;
		--muted-foreground: 240 3.8% 46.1%;
		--accent: 240 4.8% 95.9%;
		--accent-foreground: 240 5.9% 10%;
		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 0 0% 98%;
		--border: 240 5.9% 90%;
		--input: 240 5.9% 90%;
		--ring: 240 5.9% 10%;
		--radius: 0.5rem;
	}

	.dark {
		--background: 240 10% 3.9%;
		--foreground: 0 0% 98%;
		--card: 240 10% 3.9%;
		--card-foreground: 0 0% 98%;
		--popover: 240 10% 3.9%;
		--popover-foreground: 0 0% 98%;
		--primary: 0 0% 98%;
		--primary-foreground: 240 5.9% 10%;
		--secondary: 240 3.7% 15.9%;
		--secondary-foreground: 0 0% 98%;
		--muted: 240 3.7% 15.9%;
		--muted-foreground: 240 5% 64.9%;
		--accent: 240 3.7% 15.9%;
		--accent-foreground: 0 0% 98%;
		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 0 0% 98%;
		--border: 240 3.7% 15.9%;
		--input: 240 3.7% 15.9%;
		--ring: 240 4.9% 83.9%;
	}
}

@layer base {
	* {
		@apply dark;
	}

	body {
		@apply prose prose-sm mx-auto scroll-smooth bg-background font-mono text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold;
	}

	button {
		@apply border border-accent bg-secondary px-2 font-semibold text-primary-foreground hover:bg-secondary/90;
	}

	p {
		@apply text-pretty text-justify;
	}

	a,
	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	p,
	strong {
		@apply text-foreground;
	}

	details {
		@apply border border-border ~p-4/8;
	}

	summary {
		@apply font-semibold;
	}

	blockquote {
		@apply font-serif font-bold text-primary ~text-sm/3xl;
	}

	cite {
		@apply font-sans;
	}

	details[open] summary {
		@apply border border-l-0 border-r-0 border-t-0 border-border pb-0;
	}

	th {
		@apply text-primary;
	}
}

